<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.epulapp.applicationmobile.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline"
                android:textSize="@dimen/font_size_big"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/oneVsIA"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size_big"
                    android:layout_weight="1"
                    android:text="@string/onevsIA"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/oneVsone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size_big"
                    android:layout_weight="1"
                    android:text="@string/onevs1"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Button
                android:id="@+id/teamAVsTeamB"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size_big"
                android:text="@string/teamAvsTeamB"
                android:textAllCaps="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textSize="@dimen/font_size_big"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/oneVsoneOnline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size_big"
                android:text="@string/onevs1online"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
